fix: adds auth for login and create
