# docs/swagger.yaml
@@ -77,6 +77,9 @@ definitions:
     type: object
   dto.UserResponse:
     properties:
+      create_date:
+        example: "2026-01-20T00:00:00Z"
+        type: string
       email:
         example: test@mail.com
         type: string
@@ -90,33 +93,37 @@ info:
   title: Ledger API
   version: "1.0"
 paths:
-  /config:
-    get:
-      description: Check service config
+  /auth/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new user with email and password
+      parameters:
+      - description: User registration data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RegisterRequest'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
-            $ref: '#/definitions/dto.ConfigResponse'
-      summary: Get config
-      tags:
-      - system
-  /health:
-    get:
-      description: Check service availability
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
+            $ref: '#/definitions/dto.UserResponse'
+        "400":
+          description: Bad Request
           schema:
-            $ref: '#/definitions/dto.HealthResponse'
-      summary: Health check
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Register new user
       tags:
-      - system
-  /login:
+      - auth
+  /auth/login:
     post:
       consumes:
       - application/json
@@ -150,6 +157,32 @@ paths:
       summary: Login
       tags:
       - auth
+  /config:
+    get:
+      description: Check service config
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ConfigResponse'
+      summary: Get config
+      tags:
+      - system
+  /health:
+    get:
+      description: Check service availability
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.HealthResponse'
+      summary: Health check
+      tags:
+      - system
   /payments:
     get:
       description: Get a list of all payments
@@ -167,7 +200,6 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       security:
-      - BearerAuth: []
       - BearerAuth: []
       summary: List all payments
       tags:
@@ -224,37 +256,7 @@ paths:
       - BearerAuth: []
       summary: List all users
       tags:
-      - auth
-  /users/create:
-    post:
-      consumes:
-      - application/json
-      description: Create a new user with email and password
-      parameters:
-      - description: User registration data
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/dto.RegisterRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/dto.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: Register new user
-      tags:
-      - auth
+      - users
 securityDefinitions:
   BearerAuth:
     in: header
