# internal/http/dto/user.go
@@ -6,6 +6,7 @@ type RegisterRequest struct {
 }
 
 type UserResponse struct {
-	ID    string `json:"id" example:"64f8c..."`
-	Email string `json:"email" example:"test@mail.com"`
+	ID         string `json:"id" example:"64f8c..."`
+	Email      string `json:"email" example:"test@mail.com"`
+	CreateDate string `json:"create_date" example:"2026-01-20T00:00:00Z"`
 }
