# internal/http/router.go
@@ -14,13 +14,9 @@ func RegisterRouter(r *gin.Engine, payment *handlers.PaymentHandler, user *handl
 		handlers.ConfigHandler(c, cfg)
 	})
 
-	// r.POST("/payments", payment.Create)
-	// r.GET("/payments", payment.List)
+	r.POST("/auth/create", user.Create)
 
-	// r.GET("/users", user.List)
-	r.POST("/users/create", user.Create)
-
-	r.POST("/login", user.Login)
+	r.POST("/auth/login", user.Login)
 
 	auth := r.Group("/")
 
